src/styles/components/planner/_days-list.scss
// == BASE ==
.days-list {
    margin-top: 0 !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
    overflow: scroll;
    height: 100vh !important;
}

.sidebar-menu {
    background: white !important;
}

.sidebar-menu-item-icon {
    color: $grey-transparent !important;
}

// == DROPDOWN ==
.month-dropdown {
    width: 100% !important;
    border: none;
    font-family: Roboto, sans-serif;
    padding: 10px 20px 10px 20px;
    background: $red;
    font-weight: bold;
    color: white;
}

// Remove dropdown main box outline
.month-dropdown:focus {
    outline: none !important;
}

// Signle dropdown item
.month-dropdown option {
    padding: 10px;
}

// == DAYS LIST ITEM ==
.days-list-item {
    background: $blue-light;
    color: $grey;
    font-family: Roboto, sans-serif;
    padding: 5px 10px 5px 10px !important;
    border-right: 4px solid transparent !important;
}

.days-list-item:hover {
    color: $grey !important;
    font-weight: bold;
    background: $blue-transparent !important;
    border-right: 4px solid $blue !important;
}

.days-list-item-date {
    padding-top: 3px;
}

// == COUNT ==
.todo-count {
    background: $grey-transparent;
    color: white;
    font-weight: bold;
    padding: 3px 4px 3px 6px !important;
    letter-spacing: 3px;
    border-radius: 0;
    font-size: $text-small;
}

.count-column {
    padding-top: 2px;
}

// == ICON ==
.icon-box {
    background: $green;
    padding: 3px 4px 3px 4px !important;
    margin: 0 !important;
    border-radius: 0;
    font-size: $text-small;
}

.days-list-item-icon {
    margin: 0 !important;
    color: white;
}

.icon-column {
    padding-top: 2px;
}

